refactor: modernize java structures to JDK 21 and add 100% test coverage for React UI